crates/tui/tests/snapshots/render__nothing_matches.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (0/5) /zzz ────────────────────────────────────────┐┌ Task ────────────────────────────────────────────────────┐"
"│No open todos match /zzz.                                 ││No task selected.                                         │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"/zzz▁                                                                                                                   "
