crates/tui/tests/snapshots/render__one_pane_detail.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 80, 24)"
---
"┌ [1] ─────────────────────────────────────────────────────────────────────────┐"
"│Fix the flaky build                                                           │"
"│[1]  #A  in-progress  due 2026-10-10                                          │"
"│ #ci                                                                          │"
"│                                                                              │"
"│Project: /home/me/code/app                                                    │"
"│                                                                              │"
"│Description                                                                   │"
"│The nightly job fails one time in three.                                      │"
"│Suspect the cache.                                                            │"
"│                                                                              │"
"│Related                                                                       │"
"│- https://example.com/issue/1                                                 │"
"│                                                                              │"
"│Merge requests                                                                │"
"│- Pin the cache key <https://gitlab.example.com/g/p/-/merge_requests/7>       │"
"│                                                                              │"
"│Worktrees                                                                     │"
"│- /home/me/code/app-fix-cache (fix-cache)                                     │"
"│                                                                              │"
"│Sessions                                                                      │"
"│- 2026-10-03 16:40 abc123 — first look                                        │"
"└────────────────────────────────────────────────────────────────── Left: list ┘"
"j/k  /  c t p l d e  Enter open  s/S sync  ? help  q quit                       "
