crates/tui/tests/snapshots/render__one_pane_list.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 80, 24)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────────────────────────┐"
"│IN PROGRESS                                                                   │"
"│  [ 1] #A Fix the flaky build (due 2026-10-10)  #ci                           │"
"│READY                                                                         │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #review-request       │"
"│  [ 3] #C Write the release notes                                             │"
"│LATER                                                                         │"
"│  [ 4] #B Try the new profiler                                                │"
"│NO STATUS                                                                     │"
"│  [ 5] #B Call the bank                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"j/k  /  c t p l d e  Enter open  s/S sync  ? help  q quit                       "
