crates/tui/tests/snapshots/render__priority_picker.snap
---
source: crates/tui/tests/render.rs
assertion_line: 184
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│IN PROGRESS                                                                                                           │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci                                                                        │"
"│READY                                                                                                                 │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #review-request                                               │"
"│  [ 3] #C Write the release notes                                                                                     │"
"│LATER                                                                                                                 │"
"│  [ 4] #B Try the new profiler                       ┌ Priority ┐                                                     │"
"│NO STATUS                                            │ A        │                                                     │"
"│  [ 5] #B Call the bank                              │ B        │                                                     │"
"│                                                     │ C        │                                                     │"
"│                                                     └──────────┘                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"j/k  / filter  c new  t status  p prio  l log  d done  e edit  Enter open  s/S sync  ? help  q quit                     "
