crates/tui/tests/snapshots/render__sources_picker.snap
---
source: crates/tui/tests/render.rs
assertion_line: 198
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│IN PROGRESS                                                                                                           │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci                                                                        │"
"│READY                                                                                                                 │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #review-request                                               │"
"│  [ 3] #C Write the release notes                                                                                     │"
"│LATER                                                                                                                 │"
"│  [ 4] #B Try the new profiler ┌ Sync sources: Space toggles, Enter runs ─────────────┐                               │"
"│NO STATUS                      │ [x] 1 gitlab-review-requests  gitlab-review-requests │                               │"
"│  [ 5] #B Call the bank        │ [x] 2 issues                  gitlab-work-items      │                               │"
"│                               │ [ ] 3 inbox                   llm-bridge             │                               │"
"│                               └──────────────────────────────────────────────────────┘                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"j/k  / filter  c new  t status  p prio  l log  d done  e edit  Enter open  s/S sync  ? help  q quit                     "
