crates/tui/tests/snapshots/render__status_picker.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────┐┌ [1] ─────────────────────────────────────────────────────┐"
"│IN PROGRESS                                               ││Fix the flaky build                                       │"
"│  [ 1] #A Fix the flaky build (due 2026-10-10)  #ci       ││[1]  #A  in-progress  due 2026-10-10                      │"
"│READY                                                     ││ #ci                                                      │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #r││                                                          │"
"│  [ 3] #C Write the release notes                         ││Project: /home/me/code/app                                │"
"│LATER                                             ┌ Status ───────┐                                                   │"
"│  [ 4] #B Try the new profiler                    │ 1 in-progress │tion                                               │"
"│NO STATUS                                         │ 2 ready       │htly job fails one time in three.                  │"
"│  [ 5] #B Call the bank                           │ 3 waiting     │ the cache.                                        │"
"│                                                  │ 4 blocked     │                                                   │"
"│                                                  │ 5 later       │                                                   │"
"│                                                  └───────────────┘://example.com/issue/1                             │"
"│                                                          ││                                                          │"
"│                                                          ││Merge requests                                            │"
"│                                                          ││- Pin the cache key                                       │"
"│                                                          ││<https://gitlab.example.com/g/p/-/merge_requests/7>       │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"j/k move  / filter  s status  p prio  l log  d done  e edit  Enter open  S sync  ? help  q quit                         "
