crates/tui/tests/snapshots/render__third_selected.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────┐┌ [3] ─────────────────────────────────────────────────────┐"
"│IN PROGRESS                                               ││Write the release notes                                   │"
"│  [ 1] #A Fix the flaky build (due 2026-10-10)  #ci       ││[3]  #C  ready                                            │"
"│READY                                                     ││                                                          │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #r││                                                          │"
"│  [ 3] #C Write the release notes                         ││                                                          │"
"│LATER                                                     ││                                                          │"
"│  [ 4] #B Try the new profiler                            ││                                                          │"
"│NO STATUS                                                 ││                                                          │"
"│  [ 5] #B Call the bank                                   ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"j/k  / filter  c new  t status  p prio  l log  d done  e edit  Enter open  s/S sync  ? help  q quit                     "
