crates/tui/tests/snapshots/render__today_view_with_done.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 80, 16)"
---
"┌ Tasks (4/4) +done +today ────────────────────────────────────────────────────┐"
"│IN PROGRESS (1)                                                               │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci                                │"
"│                                                                              │"
"│READY (1)                                                                     │"
"│  [ 3] #C Write the release notes (due today)                                 │"
"│                                                                              │"
"│LATER (1)                                                                     │"
"│  [ 4] #B Try the new profiler (overdue 4d)                                   │"
"│                                                                              │"
"│DONE (1)                                                                      │"
"│  [ 8] #B Answer the auditor (closed 2026-10-06)                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"j/k  /  c t p l d e  Enter open  s/S sync  ? help  q quit                       "
