crates/tui/tests/snapshots/render__two_pane_detail.snap
---
source: crates/tui/tests/render.rs
assertion_line: 89
expression: "screen(&mut model, 120, 28)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────┐┌ [1] ─────────────────────────────────────────────────────┐"
"│IN PROGRESS (1)                                           ││Fix the flaky build                                       │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci            ││[1]  #A  in-progress  due in 4d, 2026-10-10               │"
"│                                                          ││ #ci                                                      │"
"│READY (2)                                                 ││                                                          │"
"│  [12] #B Review MR !88: paginate the export  #gitlab     ││Project: /home/me/code/app                                │"
"│           #review-request                                ││                                                          │"
"│  [ 3] #C Write the release notes                         ││Description                                               │"
"│                                                          ││The nightly job fails one time in three.                  │"
"│LATER (1)                                                 ││Suspect the cache.                                        │"
"│  [ 4] #B Try the new profiler                            ││                                                          │"
"│                                                          ││Related                                                   │"
"│NO STATUS (1)                                             ││- https://example.com/issue/1                             │"
"│  [ 5] #B Call the bank                                   ││                                                          │"
"│                                                          ││Merge requests                                            │"
"│                                                          ││- Pin the cache key                                       │"
"│                                                          ││<https://gitlab.example.com/g/p/-/merge_requests/7>       │"
"│                                                          ││                                                          │"
"│                                                          ││Worktrees                                                 │"
"│                                                          ││- /home/me/code/app-fix-cache (fix-cache)                 │"
"│                                                          ││                                                          │"
"│                                                          ││Sessions                                                  │"
"│                                                          ││- 2026-10-03 16:40 abc123 — first look                    │"
"│                                                          ││                                                          │"
"│                                                          ││Progress                                                  │"
"│                                                          ││- 2026-10-04 09:30: reproduced locally                    │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"j/k  / filter  c new  t status  p prio  l log  d done  e edit  Enter open  s/S sync  ? help  q quit                     "
