crates/tui/tests/snapshots/render__two_pane_layout.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 28)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────┐┌ [1] ─────────────────────────────────────────────────────┐"
"│IN PROGRESS                                               ││Fix the flaky build                                       │"
"│  [ 1] #A Fix the flaky build (due 2026-10-10)  #ci       ││[1]  #A  in-progress  due 2026-10-10                      │"
"│READY                                                     ││ #ci                                                      │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #r││                                                          │"
"│  [ 3] #C Write the release notes                         ││Project: /home/me/code/app                                │"
"│LATER                                                     ││                                                          │"
"│  [ 4] #B Try the new profiler                            ││Description                                               │"
"│NO STATUS                                                 ││The nightly job fails one time in three.                  │"
"│  [ 5] #B Call the bank                                   ││Suspect the cache.                                        │"
"│                                                          ││                                                          │"
"│                                                          ││Related                                                   │"
"│                                                          ││- https://example.com/issue/1                             │"
"│                                                          ││                                                          │"
"│                                                          ││Merge requests                                            │"
"│                                                          ││- Pin the cache key                                       │"
"│                                                          ││<https://gitlab.example.com/g/p/-/merge_requests/7>       │"
"│                                                          ││                                                          │"
"│                                                          ││Worktrees                                                 │"
"│                                                          ││- /home/me/code/app-fix-cache (fix-cache)                 │"
"│                                                          ││                                                          │"
"│                                                          ││Sessions                                                  │"
"│                                                          ││- 2026-10-03 16:40 abc123 — first look                    │"
"│                                                          ││                                                          │"
"│                                                          ││Progress                                                  │"
"│                                                          ││- 2026-10-04 09:30: reproduced locally                    │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"j/k  / filter  c new  s status  p prio  l log  d done  e edit  Enter open  S sync  ? help  q quit                       "
